@@ -29,6 +29,7 @@ use MuonIdHelpers          MuonIdHelpers-*            MuonSpectrometer
 library MuonTrackingGeometry *.cxx components/*.cxx
 apply_pattern component_library
 apply_pattern declare_joboptions files="*.py"
+apply_pattern declare_python_modules files="*.py" 
 apply_pattern declare_non_standard_include name=doc
 
 private
